--- a/Arthur Webpage/index.html
+++ b/Arthur Webpage/index.html
@@ -12,6 +12,8 @@
 <hr>
 <li><a href="file:///C:/Users/labuser06/Desktop/Arthur%20Webpage/myhtm.html">The smartest Robot</a></li>
 <hr>
+ <li><a href="Hangman.html">Game Hangman</a></li>
+<hr>
 <li><a href="http://marvelcinematicuniverse.wikia.com/wiki/Black_Panther">About my favorite hero</a></li>
 <hr>
 <li><a href="https://en.wikipedia.org/wiki/Aston_Martin_Vulcan">About my favorite car</a></li>
