--- a/Arthur Webpage/Hangman.html
+++ b/Arthur Webpage/Hangman.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="hangman.css"/>
+    <link rel="stylesheet" href="hangman.css"></link>
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 
 
 <script>
-function(){
+function startGame(){
     var words = ["school", "javascript", "window", "star", "notebook", "flower", "chocolate", "icecream"];
     /*Bari @ntrutyun@ kareli e anel patahakan skzbunqov
      ogtagortselov Math.floor(Math.random()*words.length)*/
